# feed-reader

./: .coveragerc  .dockerignore  .gitignore  DEVELOPER_GUIDE.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  SETUP_PROMPT.md  docker-compose.yml  pyproject.toml  test_correlation_id_integration.py
.claude/skills/feed-reader/: SKILL.md
docs/: DECORATOR_PATTERNS.md  MCP_INSPECTOR_GUIDE.md  UNIFIED_LOGGING.md  dockerize-mcp-server-guide.md
feed_reader/: __init__.py  __main__.py  config.py  logging_config.py
feed_reader/client/: __init__.py  app.py
feed_reader/decorators/: base_logger_sink.py  exception_handler.py  sqlite_logger.py  tool_logger.py
feed_reader/log_system/: __init__.py
feed_reader/log_system/destinations/: sqlite.py
feed_reader/models/: __init__.py  schemas.py
feed_reader/server/: __init__.py  app.py
feed_reader/services/: __init__.py  feed_discovery.py  feed_parser.py  scraper.py
feed_reader/storage/: __init__.py  database.py
feed_reader/tools/: __init__.py  feed_tools.py
feed_reader/ui/: app.py
feed_reader/ui/lib/: __init__.py  components.py  styles.py  utils.py
feed_reader/ui/pages/: 1_Home.py  2_Configuration.py  3_Logs.py  4_Documentation.py
scripts/: docker.py
tests/: README.md
tests/integration/: COVERAGE_GUIDE.md  conftest.py  test_feed_tools_integration.py
tests/unit/: test_database.py  test_decorators.py  test_feed_services.py
working-files/: SPEC.md
